# semantic-page-extractor

./: .gitignore  README.md  SPEC.md  TODO.md  pyproject.toml
data/: out1.json  out2.json  out3.json  out4.json  out5.json
examples/: extract_from_url.py  standalone_example.py
semantic_page_extractor/: __init__.py  actionable.py  browser_script.py  errors.py  extractor.py  intent.py  models.py  normalize.py  output.py  signatures.py
tests/: conftest.py
tests/fixtures/: sample-page.html
tests/integration/: test_extractor.py
tests/regression/: test_actionable_regression.py  test_intent_regression.py  test_semantic_regression.py
tests/unit/: test_actionable.py  test_disabled_detection.py  test_intent_filter.py  test_normalize.py  test_output_payload.py  test_signatures.py
