[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-page-extractor"
version = "0.1.0"
description = "Deterministic semantic page extractor using Playwright"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
  "playwright>=1.44,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "pytest-asyncio>=0.23,<1",
]

[tool.setuptools.packages.find]
include = ["semantic_page_extractor*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
